updated cloudFormation to remove old repo and clone again to ensure it pulls the latest code

--- a/server/cloudFormation.yaml
+++ b/server/cloudFormation.yaml
@@ -26,9 +26,10 @@ Resources:
           service docker start
           usermod -aG docker ec2-user
           cd /home/ec2-user
+          rm -rf sw_task
           git clone https://github.com/FarahKhalill/sw_task.git
-          cd server
-          docker-compose up -d
+          cd sw_task/server
+          docker-compose up -d --build
 
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
