--- a/server/cloudFormation.yaml
+++ b/server/cloudFormation.yaml
@@ -25,10 +25,12 @@ Resources:
           yum install -y docker
           service docker start
           usermod -aG docker ec2-user
+          curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+          chmod +x /usr/local/bin/docker-compose
           cd /home/ec2-user
           rm -rf sw_task
           git clone https://github.com/FarahKhalill/sw_task.git
-          cd sw_task/server
+          cd server
           docker-compose up -d --build
 
   InstanceSecurityGroup:
