feat: prepared project for production, nginx docker image to be reverse proxy ssl.

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,7 @@
 volumes:
   production_postgres_data: {}
   production_postgres_data_backups: {}
+  static_volume: {}
   production_traefik: {}
   
 
@@ -12,6 +13,8 @@ services:
       dockerfile: ./compose/production/django/Dockerfile
 
     image: sw_task_production_django
+    volumes:
+      - static_volume:/app/staticfiles
     depends_on:
       - postgres
       - redis
@@ -31,28 +34,20 @@ services:
     env_file:
       - ./.envs/.production/.postgres
 
-  traefik:
-    build:
-      context: .
-      dockerfile: ./compose/production/traefik/Dockerfile
-    image: sw_task_production_traefik
-    depends_on:
-      - django
-    volumes:
-      - production_traefik:/etc/traefik/acme
-    ports:
-      - '0.0.0.0:80:80'
-      - '0.0.0.0:443:443'
-
   redis:
     image: docker.io/redis:6
     
-
-  awscli:
+  nginx:
     build:
       context: .
-      dockerfile: ./compose/production/aws/Dockerfile
-    env_file:
-      - ./.envs/.production/.django
+      dockerfile: ./compose/production/nginx/Dockerfile
+    image: sw_task_production_nginx
+    container_name: sw_task_production_nginx
+    depends_on:
+      - django
+    ports:
+      - "8080:80"
+      - "443:443"
     volumes:
-      - production_postgres_data_backups:/backups:z
+      - static_volume:/app/staticfiles
+      - ./compose/production/nginx/ssl:/etc/nginx/ssl
