--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,7 +1,33 @@
+upstream django {
+  server django:8080;
+}
+
 server {
-  listen       80;
-  server_name  localhost;
-  location /media/ {
-    alias /usr/share/nginx/media/;
+  listen   443;
+  # change later with the actual domain
+  server   localhost;
+  # here is the cert and key
+  # ssl_certificate /etc/nginx/ssl/.crt;
+  # ssl_certificate_key /etc/nginx/ssl/.key;
+  # ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+  # ssl_ciphers         HIGH:!aNULL:!MD5;
+
+  location / {
+    proxy_pass http://django;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
+  # location /media/ {
+  #   alias /usr/share/nginx/media/;
+  # }
+  location /static/ {
+    alias /app/staticfiles/;
+  }
+}
+server {
+  listen 80;
+  server_name  localhost;
+  return 301 https://$host$request_uri;
 }
