chore: add media location in case of future dealing with media.

--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -3,6 +3,11 @@ upstream django {
 }
 
 server {
+  listen 80;
+  server_name  localhost;
+  return 301 https://$host$request_uri;
+}
+server {
   listen   443;
   # change later with the actual domain
   server   localhost;
@@ -19,15 +24,11 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
-  # location /media/ {
-  #   alias /usr/share/nginx/media/;
-  # }
+  # Static files
   location /static/ {
     alias /app/staticfiles/;
   }
 }
-server {
-  listen 80;
-  server_name  localhost;
-  return 301 https://$host$request_uri;
-}
+  # Media files but no media so it is empty
+  # location /media/ {
+  # }
