--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -2,15 +2,15 @@ upstream django {
   server django:8080;
 }
 
+# server {
+#   listen 80;
+#   server_name  localhost;
+#   return 301 https://$host$request_uri;
+# }
 server {
-  listen 80;
-  server_name  localhost;
-  return 301 https://$host$request_uri;
-}
-server {
-  listen   443;
+  listen   80;
   # change later with the actual domain
-  server   localhost;
+  server_name  localhost;
   # here is the cert and key
   # ssl_certificate /etc/nginx/ssl/.crt;
   # ssl_certificate_key /etc/nginx/ssl/.key;
