--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -19,8 +19,7 @@ services:
       - postgres
       - redis
     env_file:
-      - ./.envs/.production/.django
-      - ./.envs/.production/.postgres
+      - ./.env
     command: /start
 
   postgres:
@@ -32,7 +31,7 @@ services:
       - production_postgres_data:/var/lib/postgresql/data
       - production_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.production/.postgres
+      - ./.env
 
   redis:
     image: docker.io/redis:6
