--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,3 +1,5 @@
+# note the file is ready for production but
+# the ssl is commented out for now
 upstream django {
   server django:8080;
 }
@@ -12,10 +14,8 @@ server {
   # change later with the actual domain
   server_name  localhost;
   # here is the cert and key
-  # ssl_certificate /etc/nginx/ssl/.crt;
-  # ssl_certificate_key /etc/nginx/ssl/.key;
-  # ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-  # ssl_ciphers         HIGH:!aNULL:!MD5;
+  # ssl_certificate /etc/nginx/ssl/cert.crt;
+  # ssl_certificate_key /etc/nginx/ssl/cert.key;
 
   location / {
     proxy_pass http://django;
