Add :Docker Compose configuration and Pydantic model setup
- Created a Docker Compose file for setting up the pgadmin and PostgreSQL database.
- Added a config.py file for Pydantic model configuration to manage environment variables and settings.
- Initialized the Django project and app structure for the categories feature.

--- a/categories_project/pyproject.toml
+++ b/categories_project/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 django = "^5.1.2"
 djangorestframework = "^3.15.2"
 psycopg2-binary = "^2.9.9"    # for postgres db connection - needed to avoid building wheels for psycopg2 from source
+pydantic = "^2.9.2"
+pydantic-settings = "^2.5.2"
 
 
 [build-system]
