Test : adjust docker compose file to make web network aliases to production_db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
     depends_on:
       - production_db
     networks:
-      - database_network 
+      database_network:
+        aliases:
+          - production_db
   production_db:
     image: postgres:16-alpine
     restart: unless-stopped
