--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: bash -c "python categories_project/manage.py migrate && python categories_project/manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python categories_project/manage.py migrate  && python categories_project/manage.py init_categories && python categories_project/manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
