--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - production_db
     networks:
       - database_network 
+    env_file:
+      - .env
   production_db:
     image: postgres:16-alpine
     restart: unless-stopped
