--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,11 @@ services:
     env_file: .env
     command: >
       sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
              gunicorn rightshero.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/code
+      - static_volume:/code/staticfiles
     ports:
       - "8000:8000"
     environment:
@@ -29,3 +31,4 @@ services:
 
 volumes:
   postgres_data:
+  static_volume: 
