--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     env_file: .env
     command: >
       sh -c "python manage.py migrate &&
+             python manage.py createsuperuser --noinput ||
+             echo 'Superuser already exists' &&
              python manage.py collectstatic --noinput &&
              gunicorn rightshero.wsgi:application --bind 0.0.0.0:8000"
     volumes:
