--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=admin
+
+SECRET_KEY=django-insecure-y2a%3e1&eaztok8%5#&ivx*e*dccw43*u04(!qrjqav0e%^a^8
+DEBUG=False
