--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.12"
 services:
   web:
     build: .
-    command: gunicorn sw_task.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn sw_task.wsgi:application --bind 0.0.0.0:8000 --reload
     volumes:
       - .:/app
     ports:
