--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -115,6 +115,10 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8000
+          ToPort: 8000
+          CidrIp: 0.0.0.0/0
 
   EC2Instance:
     Type: 'AWS::EC2::Instance'
