--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
 asgiref==3.8.1
+awscli==1.36.1
+botocore==1.35.60
+colorama==0.4.6
 Django==5.1.3
+docutils==0.16
+gunicorn==23.0.0
+jmespath==1.0.1
+packaging==24.2
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+rsa==4.7.2
+s3transfer==0.10.3
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.2.3
